[package]
name = "ensure_no_std"
version = "0.1.0"
authors = ["Greg Green <gpgreen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epub = { path = ".." }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"